--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "geolib": "^3.3.4",
     "next": "^14.2.3",
+    "openai": "^4.56.2",
     "react": "^18",
     "react-dom": "^18"
   },
