--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.3",
     "ai": "^3.3.20",
     "geolib": "^3.3.4",
     "next": "^14.2.3",
