--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^14.2.3",
     "openai": "^4.56.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
