--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.68",
     "@headlessui/react": "^2.1.3",
-    "ai": "^3.3.20",
+    "ai": "^3.4.17",
     "geolib": "^3.3.4",
     "next": "^14.2.3",
     "openai": "^4.56.2",
     "react": "^18",
     "react-dom": "^18",
-    "use-debounce": "^10.0.4"
+    "use-debounce": "^10.0.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
