--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.68",
     "@headlessui/react": "^2.1.3",
+    "@vercel/analytics": "^1.3.1",
     "ai": "^3.4.17",
     "geolib": "^3.3.4",
     "next": "^14.2.3",
