--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^14.2.3",
     "openai": "^4.56.2",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18",
     "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
