--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
+    "react-pdftotext": "^1.3.3",
     "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
   },
